--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan|stateHidden">
+        <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan|stateHidden"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +31,8 @@
         <activity
             android:name=".GameActivity"
             android:label="@string/app_name" />
+
     </application>
+
 
 </manifest>
