Imported HJW's pause and scroll text, fixed some bugs
- Pause foreground added with sound and other standard pause features
- Scroll text imported as is with app logo instead of parrot
- Fixed a bug where double-clicking on image can cause auto matches
- Switched most xml strings into strings.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    // GlideApp
+    // GlideApp (not used unless enabled in settings)
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    // jsoup HTML parser library @ https://jsoup.org/
+    // jsoup HTML parser library @ https://jsoup.org/ (not used unless enabled in settings)
     implementation 'org.jsoup:jsoup:1.13.1'
 }
 
